# for display continuity sake please use 2 spaces instead of tabs

2013-02-24 mmichaud <michael.michaud@free.fr>
  * fix 1447907 : upgrade jdom.jar (1.0b8) to jdom-1.1.3.jar

2013-02-20 mmichaud <michael.michaud@free.fr>
  * Add TextBasesVertexStyle.java2xml to be able to save text based
    decoration styles in a project

2013-02-17 mmichaud <michael.michaud@free.fr>
  * FR 3601072 : Replace aggregation-0.2.5 by 0.2.6 in PLUS distribution
  * Include CoverageCleanerPlugIn in Topology extension

2013-02-14 mmichaud <michael.michaud@free.fr>
  * Fixed a problem with TEXT attribute in ExtractLayerByAttributePlugIn

2013-01-29 mmichaud <michael.michaud@free.fr>
  * Prevent flickering of AboutDialog the first time it is opened.
  
2013-01-20 mmichaud <michael.michaud@free.fr>
  * Fix bug 3600776 : regression in LabelStyle (caused by jts update to 1.13)

2013-01-20 mmichaud <michael.michaud@free.fr>
  * Fixed a memory leak in WKTPlugIn (geometry text representation was retained) 
  * Improve UndoableCommand so that one can deactivate commands related to a
    specific layer when the layer no more exists.
  * Resources used by a UndoableCommand can be removed if the UndoableCommand
    is related to a Layer which does not exist anymore (fix another memory leak) 
  
2013-01-19 mmichaud <michael.michaud@free.fr>
  * Fixed a severe bug in EditAttributeByFormulaPlugIn + I18N improvement
  
2013-01-15 mmichaud <michael.michaud@free.fr>
  * Avoid NPE in the case a WMS Layer has no Title

2013-01-15  Giuseppe Aruta (giuseppe_aruta@yahoo.it)
  * Add several icons to File and Tools menu
  
2013-01-09 mmichaud <michael.michaud@free.fr>
  * Try to make feature selection order more predictable

2012-12-31 
  PLUS bump JumpPrinter to 1.83 
  - problems with errors in the range field syntax are hopefully now fixed (detected before they cause problems)
  - updated the language files as advised and added a new Finnish language file to the jar