@@ -2,6 +2,9 @@
 
 2013-02-24 mmichaud <michael.michaud@free.fr>
   * fix 1447907 : upgrade jdom.jar (1.0b8) to jdom-1.1.3.jar
+  * fix 1472782 : date is now shown with time in attribute table. It is 
+    persisted as timestamp in postgis database and jml files, but time is lost
+    in shapefiles.
 
 2013-02-20 mmichaud <michael.michaud@free.fr>
   * Add TextBasesVertexStyle.java2xml to be able to save text based
